unpackaged/main/default/objects/ResourceBooking__c/ResourceBooking__c.object-meta.xml
<CustomObject>
    <label>Resource Booking</label>
    <nameField>
        <displayFormat>TB{0000}</displayFormat>
        <label>Technical Booking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Bookings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>