unpackaged/main/default/objects/ResourceBooking__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Resource Bookings</relationshipLabel>
    <relationshipName>ResourceBookings</relationshipName>
    <type>Lookup</type>
</CustomField>