unpackaged/main/default/objects/ResourceBooking__c/fields/Actual_Invoice_Unit_Price_Day_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_Invoice_Unit_Price_Day_Rate__c</fullName>
    <label>Actual Invoice Unit Price Day Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>