unpackaged/main/default/objects/ResourceBooking__c/fields/Booked_by__c.field-meta.xml
<CustomField>
    <fullName>Booked_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booked by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>TechnicalBookings</relationshipName>
    <type>Lookup</type>
</CustomField>