unpackaged/main/default/objects/ResourceBooking__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Consultancy</fullName>
            </value>
            <value>
                <fullName>Helpdesk</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Meetings</fullName>
            </value>
            <value>
                <fullName>Personal Development</fullName>
            </value>
            <value>
                <fullName>Prep</fullName>
            </value>
            <value>
                <fullName>Pre-Sales</fullName>
            </value>
            <value>
                <fullName>Project Work</fullName>
            </value>
            <value>
                <fullName>Sickness</fullName>
            </value>
            <value>
                <fullName>TAM Visit</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Helpdesk - Tier 2 Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>