unpackaged/main/default/objects/ResourceBooking__c/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <formula>IF(IsBillable__c,
  CASE( TEXT(Category__c),
    'Consultancy', '#00ff00',
    'Helpdesk', '',
    'Holiday', '#0070c0',
    'Meetings', '',
    'Pre-Sales', '#ffff00',
    'Training', '#92d050',
    '#c0c0c0'
  )
  ,'#ff0000'
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Colour</label>
    <type>Text</type>
</CustomField>