unpackaged/main/default/objects/ResourceBooking__c/fields/Commission__c.field-meta.xml
<CustomField>
    <fullName>Commission__c</fullName>
    <formula>IF(
  IsBillable__c,
  IF(
    ISPICKVAL(Category__c, "TAM Visit"),
    50,
    IF(DayRate__c&gt;750, 75, DayRate__c*0.1) 
  ),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>