unpackaged/main/default/objects/ResourceBooking__c/fields/Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Date_Formula__c</fullName>
    <formula>DATE(1900,1,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Formula</label>
    <type>Date</type>
</CustomField>