unpackaged/main/default/objects/ResourceBooking__c/fields/DayRate__c.field-meta.xml
<CustomField>
    <fullName>DayRate__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Daily Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>