unpackaged/main/default/objects/ResourceBooking__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>IF(ISBLANK(Opportunity__c),
  IF(ISBLANK(TrainingCourse__c),
    TEXT(Resource__r.Division__c),
    TrainingCourse__r.Division__c
  ),
  TEXT(Opportunity__r.Division__c)
)</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>