unpackaged/main/default/objects/ResourceBooking__c/fields/DoubleTimeWeekends__c.field-meta.xml
<CustomField>
    <fullName>DoubleTimeWeekends__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Double Time Weekends</label>
    <type>Checkbox</type>
</CustomField>