unpackaged/main/default/objects/ResourceBooking__c/fields/Effective_Resource__c.field-meta.xml
<CustomField>
    <fullName>Effective_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The actual resource undertaking this work (for use on BIM Internal Projects only)</description>
    <label>Effective Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Resource Bookings (Effective Resource)</relationshipLabel>
    <relationshipName>Resource_Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>