unpackaged/main/default/objects/ResourceBooking__c/fields/FinishDateTime__c.field-meta.xml
<CustomField>
    <fullName>FinishDateTime__c</fullName>
    <formula>DATETIMEVALUE(TEXT(FinishDate__c) + ' ' + TEXT(FinishTime__c) + ':00')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Finish Date/Time</label>
    <type>DateTime</type>
</CustomField>