unpackaged/main/default/objects/ResourceBooking__c/fields/FinishTime__c.field-meta.xml
<CustomField>
    <fullName>FinishTime__c</fullName>
    <inlineHelpText>Set to  minus 1 hour during Daylight Savings Time</inlineHelpText>
    <label>Finish Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10:00</fullName>
            </value>
            <value>
                <fullName>11:00</fullName>
            </value>
            <value>
                <fullName>12:00</fullName>
            </value>
            <value>
                <fullName>13:00</fullName>
            </value>
            <value>
                <fullName>14:00</fullName>
            </value>
            <value>
                <fullName>15:00</fullName>
            </value>
            <value>
                <fullName>16:00</fullName>
                <default>true</default>
                <label>16:00</label>
            </value>
            <value>
                <fullName>17:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>