unpackaged/main/default/objects/ResourceBooking__c/fields/FinishTimeDecimal__c.field-meta.xml
<CustomField>
    <fullName>FinishTimeDecimal__c</fullName>
    <formula>CASE(TEXT(FinishTime__c),
  "10:00",0.25,
  "11:00",0.25,
  "12:00",0.5,
  "13:00",0.5,
  "14:00",0.75,
  "15:00",0.75,
  "16:00",1,
  "17:00",1,
1)</formula>
    <label>Finish Time Decimal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>