unpackaged/main/default/objects/ResourceBooking__c/fields/IncludeWeekends__c.field-meta.xml
<CustomField>
    <fullName>IncludeWeekends__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Weekends</label>
    <type>Checkbox</type>
</CustomField>