unpackaged/main/default/objects/ResourceBooking__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Resource Bookings</relationshipLabel>
    <relationshipName>ResourceBookings</relationshipName>
    <type>Lookup</type>
</CustomField>