unpackaged/main/default/objects/ResourceBooking__c/fields/InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>InvoiceDate__c</fullName>
    <formula>Invoice__r.Date__c</formula>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>