unpackaged/main/default/objects/ResourceBooking__c/fields/InvoiceID__c.field-meta.xml
<CustomField>
    <fullName>InvoiceID__c</fullName>
    <formula>Invoice__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice ID</label>
    <type>Text</type>
</CustomField>