unpackaged/main/default/objects/ResourceBooking__c/fields/InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>InvoiceNumber__c</fullName>
    <formula>Invoice__r.InvoiceNumber__c</formula>
    <label>Invoice Number</label>
    <type>Text</type>
</CustomField>