unpackaged/main/default/objects/ResourceBooking__c/fields/IsBillable__c.field-meta.xml
<CustomField>
    <fullName>IsBillable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Billable</label>
    <type>Checkbox</type>
</CustomField>