unpackaged/main/default/objects/ResourceBooking__c/fields/IsInvoiced__c.field-meta.xml
<CustomField>
    <fullName>IsInvoiced__c</fullName>
    <formula>OR(
  Invoice__r.IsInvoice__c,
  TrainingCourse__r.IsInvoiced__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoiced</label>
    <type>Checkbox</type>
</CustomField>