unpackaged/main/default/objects/ResourceBooking__c/fields/LegacyName__c.field-meta.xml
<CustomField>
    <fullName>LegacyName__c</fullName>
    <label>LegacyName</label>
    <length>18</length>
    <type>Text</type>
</CustomField>