unpackaged/main/default/objects/ResourceBooking__c/fields/OpportunityAmount__c.field-meta.xml
<CustomField>
    <fullName>OpportunityAmount__c</fullName>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>