unpackaged/main/default/objects/ResourceBooking__c/fields/OpportunityDivision__c.field-meta.xml
<CustomField>
    <fullName>OpportunityDivision__c</fullName>
    <formula>TEXT(Opportunity__r.Division__c)</formula>
    <label>Opportunity Division</label>
    <type>Text</type>
</CustomField>