unpackaged/main/default/objects/ResourceBooking__c/fields/OpportunityProbability__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProbability__c</fullName>
    <formula>Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Probability %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>