unpackaged/main/default/objects/ResourceBooking__c/fields/Places_Booked__c.field-meta.xml
<CustomField>
    <fullName>Places_Booked__c</fullName>
    <formula>TrainingCourse__r.PlacesBooked__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Places Booked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>