unpackaged/main/default/objects/ResourceBooking__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <label>Project</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Please select an active Resource Project.</errorMessage>
        <filterItems>
            <field>Project__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Resource Project</value>
        </filterItems>
        <filterItems>
            <field>Project__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Please select an active Resource Project.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Resource Bookings</relationshipLabel>
    <relationshipName>ResourceBookings</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>