unpackaged/main/default/objects/ResourceBooking__c/fields/QuoteNumber__c.field-meta.xml
<CustomField>
    <fullName>QuoteNumber__c</fullName>
    <formula>Opportunity__r.Quote_Number__c</formula>
    <label>Quote Number</label>
    <type>Text</type>
</CustomField>