unpackaged/main/default/objects/ResourceBooking__c/fields/Resource__c.field-meta.xml
<CustomField>
    <fullName>Resource__c</fullName>
    <label>Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Resource Bookings</relationshipLabel>
    <relationshipName>TechnicalBookings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>