unpackaged/main/default/objects/ResourceBooking__c/fields/ResourceName__c.field-meta.xml
<CustomField>
    <fullName>ResourceName__c</fullName>
    <formula>Resource__r.Name</formula>
    <label>Resource Name</label>
    <type>Text</type>
</CustomField>