unpackaged/main/default/objects/ResourceBooking__c/fields/ResourceType__c.field-meta.xml
<CustomField>
    <fullName>ResourceType__c</fullName>
    <formula>TEXT(Resource__r.Type__c)</formula>
    <label>Resource Type</label>
    <type>Text</type>
</CustomField>