unpackaged/main/default/objects/ResourceBooking__c/fields/ShowTimeAs__c.field-meta.xml
<CustomField>
    <fullName>ShowTimeAs__c</fullName>
    <formula>CASE(TEXT(Status__c),
  "Requested", "Tentative",
  "Booked", "Busy",
  "In Progress", "Busy",
  "Completed", "Busy",
  "Cancelled", "Free",
  "Busy"
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Time As</label>
    <type>Text</type>
</CustomField>