unpackaged/main/default/objects/ResourceBooking__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <formula>DATETIMEVALUE(TEXT(StartDate__c) + ' ' + TEXT(StartTime__c) + ':00')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>