unpackaged/main/default/objects/ResourceBooking__c/fields/StartTime__c.field-meta.xml
<CustomField>
    <fullName>StartTime__c</fullName>
    <inlineHelpText>Set to minus 1 hour during Daylight Savings Time</inlineHelpText>
    <label>Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>08:00</fullName>
                <default>true</default>
                <label>08:00</label>
            </value>
            <value>
                <fullName>09:00</fullName>
            </value>
            <value>
                <fullName>10:00</fullName>
            </value>
            <value>
                <fullName>11:00</fullName>
            </value>
            <value>
                <fullName>12:00</fullName>
            </value>
            <value>
                <fullName>13:00</fullName>
            </value>
            <value>
                <fullName>14:00</fullName>
            </value>
            <value>
                <fullName>15:00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>