unpackaged/main/default/objects/ResourceBooking__c/fields/StartTimeDecimal__c.field-meta.xml
<CustomField>
    <fullName>StartTimeDecimal__c</fullName>
    <formula>CASE(TEXT(StartTime__c),
  "08:00",0,
  "09:00",0,
  "10:00",0.25,
  "11:00",0.25,
  "12:00",0.5,
  "13:00",0.5,
  "14:00",0.75,
  "15:00",0.75,
0)</formula>
    <label>Start Time Decimal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>