unpackaged/main/default/objects/ResourceBooking__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>IF(ISBLANK(Account__r.Name),
  IF(ISBLANK(TrainingCourse__c),
    TEXT(Category__c),
    TrainingCourse__r.Name
  ),
  Account__r.Name 
)</formula>
    <label>Booking Title</label>
    <type>Text</type>
</CustomField>