unpackaged/main/default/objects/ResourceBooking__c/fields/Total_Commission_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Total_Commission_Adjustment__c</fullName>
    <description>Allows Sharon to Take Minus Values off the Commission</description>
    <label>Total Commission Adjustment</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>