unpackaged/main/default/objects/ResourceBooking__c/fields/TotalBillableDays__c.field-meta.xml
<CustomField>
    <fullName>TotalBillableDays__c</fullName>
    <formula>TotalWeekDays__c + ( TotalWeekendDays__c * WeekendMultiplier__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Billable Days (Data)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>