unpackaged/main/default/objects/ResourceBooking__c/fields/TotalBillableDays_RO__c.field-meta.xml
<CustomField>
    <fullName>TotalBillableDays_RO__c</fullName>
    <label>Total Billable Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>