unpackaged/main/default/objects/ResourceBooking__c/fields/TotalCommission__c.field-meta.xml
<CustomField>
    <fullName>TotalCommission__c</fullName>
    <formula>MIN(
  CASE(TEXT(Category__c),
    "TAM Visit", 50,
    IF(IsBillable__c, DayRate__c, 0) * 0.1
  ),
  75
) * FLOOR(TotalBillableDays_RO__c)
+
CASE(TEXT(Category__c),
  "TAM Visit", 50,
  IF(IsBillable__c, DayRate__c, 0) * 0.1
) * (TotalBillableDays_RO__c - FLOOR(TotalBillableDays_RO__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>