unpackaged/main/default/objects/ResourceBooking__c/fields/TotalDays__c.field-meta.xml
<CustomField>
    <fullName>TotalDays__c</fullName>
    <formula>TotalWeekDays__c + TotalWeekendDays__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>