unpackaged/main/default/objects/ResourceBooking__c/fields/TotalWeekDays__c.field-meta.xml
<CustomField>
    <fullName>TotalWeekDays__c</fullName>
    <formula>CASE(MOD( StartDate__c - DATE(1985,6,24),7), 
  0 , CASE( MOD( FinishDate__c - StartDate__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( FinishDate__c - StartDate__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( FinishDate__c - StartDate__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( FinishDate__c - StartDate__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( FinishDate__c - StartDate__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( FinishDate__c - StartDate__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( FinishDate__c - StartDate__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( FinishDate__c - StartDate__c )/7)*5)
- IF(CASE(MOD(StartDate__c - DATE(1985,6,24),7),5,1,6,1,0)&lt;&gt;1,VALUE(TEXT(StartTimeDecimal__c)),0)
+ IF(CASE(MOD(FinishDate__c - DATE(1985,6,24),7),5,1,6,1,0)&lt;&gt;1,VALUE(TEXT(FinishTimeDecimal__c))-1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Week Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>