unpackaged/main/default/objects/ResourceBooking__c/fields/TotalWeekendDays__c.field-meta.xml
<CustomField>
    <fullName>TotalWeekendDays__c</fullName>
    <formula>IF(IncludeWeekends__c,
CASE(MOD( StartDate__c - DATE(1985,6,24),7),
0 , CASE( MOD( FinishDate__c - StartDate__c, 7),1,0,2,0,3,0,4,0,5,1,6,2,0),
1 , CASE( MOD( FinishDate__c - StartDate__c, 7),0,0,1,0,2,0,3,0,4,0,5,2,2),
2 , CASE( MOD( FinishDate__c - StartDate__c, 7),0,0,1,0,2,0,3,1,2),
3 , CASE( MOD( FinishDate__c - StartDate__c, 7),0,0,1,0,2,1,2),
4 , CASE( MOD( FinishDate__c - StartDate__c, 7),0,0,1,1,2),
5 , CASE( MOD( FinishDate__c - StartDate__c, 7),0,1,2),
6 , CASE( MOD( FinishDate__c - StartDate__c, 7),6,2,1),
999)
- IF(CASE(MOD(StartDate__c - DATE(1985,6,24),7),5,1,6,1,0)==1,VALUE(TEXT(StartTimeDecimal__c)),0)
+ IF(CASE(MOD(FinishDate__c - DATE(1985,6,24),7),5,1,6,1,0)==1,VALUE(TEXT(FinishTimeDecimal__c))-1,0)
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Weekend Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>