unpackaged/main/default/objects/ResourceBooking__c/fields/TrainingCourse__c.field-meta.xml
<CustomField>
    <fullName>TrainingCourse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Training Course</label>
    <referenceTo>TrainingCourse__c</referenceTo>
    <relationshipName>TechnicalBookings</relationshipName>
    <type>Lookup</type>
</CustomField>