unpackaged/main/default/objects/ResourceBooking__c/fields/WeekendMultiplier__c.field-meta.xml
<CustomField>
    <fullName>WeekendMultiplier__c</fullName>
    <defaultValue>1.00</defaultValue>
    <label>Weekend Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>