unpackaged/main/default/objects/ResourceBooking__c/validationRules/BIM_Internal_Project_Resource.validationRule-meta.xml
<ValidationRule>
    <fullName>BIM_Internal_Project_Resource</fullName>
    <active>true</active>
    <description>Effective Resource must be populated if the Resource is booked against BIM Internal Projects</description>
    <errorConditionFormula>AND(Resource__r.Name = "BIM - Internal Projects",
 ISBLANK(Effective_Resource__c))</errorConditionFormula>
    <errorDisplayField>Effective_Resource__c</errorDisplayField>
    <errorMessage>Please ensure that you have populated the Effective Resource field before saving this record.</errorMessage>
</ValidationRule>