unpackaged/main/default/objects/ResourceBooking__c/validationRules/RESBOOK_VR02_StartDateBeforeEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>RESBOOK_VR02_StartDateBeforeEndDate</fullName>
    <active>true</active>
    <description>Cannot create a Resource Booking where the End Date comes before the Start Date</description>
    <errorConditionFormula>IF(FinishDateTime__c &lt; StartDateTime__c, true, false)</errorConditionFormula>
    <errorMessage>The Start Date must be before the Finish Date.  Please rectify before saving this record. [RESBOOK_VR02]</errorMessage>
</ValidationRule>