unpackaged/main/default/objects/ResourceBooking__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Resource__c</columns>
    <columns>Category__c</columns>
    <columns>IsBillable__c</columns>
    <columns>Project__c</columns>
    <columns>Opportunity__c</columns>
    <columns>QuoteNumber__c</columns>
    <columns>TrainingCourse__c</columns>
    <columns>StartDate__c</columns>
    <columns>FinishDate__c</columns>
    <columns>TotalDays__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>