unpackaged/main/default/objects/ResourceBooking__c/listViews/Construction_Team_Overview.listView-meta.xml
<ListView>
    <fullName>Construction_Team_Overview</fullName>
    <columns>NAME</columns>
    <columns>IsBillable__c</columns>
    <columns>Category__c</columns>
    <columns>Colour__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>Autodesk</value>
    </filters>
    <label>Construction Team Overview</label>
</ListView>